extended minimum table width to 1050px and prevented from overflowing

--- a/css/sample_1.css
+++ b/css/sample_1.css
@@ -4,7 +4,7 @@
 
 .coverage-section {
   width: 95%;
-  min-width: 920px;
+  min-width: 1050px;
   margin: 0 auto;
 }
 
@@ -26,4 +26,10 @@
 
 .no-bottom-border {
   border-bottom: none !important;
+}
+
+/* Bootstrap override to prevent rows overflow */
+.table thead>tr>th, .table tbody>tr>th, .table tfoot>tr>th, .table thead>tr>td, .table tbody>tr>td, .table tfoot>tr>td {
+  word-wrap: break-word;
+  max-width: 235px;
 }
